# kramer

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ast.h  lexer.h  parser.h  token.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  kramer  lexer.c  main.c  parser.c  token.c
tests/: CMakeLists.txt
tests/lexer/: test_lexer.c
tests/parser/: test_parser.c
tests/simple/: test_simple.c
